[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/fonts/MainTheme.tres" type="Theme" id=1]
[ext_resource path="res://assets/fonts/BebasNeue-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scripts/Autoloads/GUI.gd" type="Script" id=3]
[ext_resource path="res://assets/images/GUI/heart_icon.png" type="Texture" id=4]
[ext_resource path="res://assets/images/GUI/gem_icon.png" type="Texture" id=5]
[ext_resource path="res://assets/images/GUI/worm_icon.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[node name="GUI" type="CanvasLayer"]
pause_mode = 2
layer = 100
script = ExtResource( 3 )

[node name="PauseScene" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackOverlay" type="ColorRect" parent="PauseScene"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.329412 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="PauseScene"]
margin_left = 40.0
margin_top = 56.0
margin_right = 147.0
margin_bottom = 86.0
theme = SubResource( 2 )
text = "Jogo Pausado"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Opcoes" type="VBoxContainer" parent="PauseScene"]
margin_left = 40.0
margin_top = 104.0
margin_right = 144.0
margin_bottom = 160.0
theme = ExtResource( 1 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Voltar ao Jogo" type="Button" parent="PauseScene/Opcoes"]
margin_right = 104.0
margin_bottom = 26.0
text = "Voltar ao Jogo"

[node name="Sair" type="Button" parent="PauseScene/Opcoes"]
margin_top = 30.0
margin_right = 104.0
margin_bottom = 56.0
text = "Sair"

[node name="UserInterface" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="items_missoes" type="HBoxContainer" parent="UserInterface"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -128.0
margin_top = 8.0
margin_right = -6.0
margin_bottom = 40.0
grow_horizontal = 0
theme = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gems" type="TextureRect" parent="UserInterface/items_missoes"]
anchor_top = -0.15625
anchor_bottom = -0.15625
margin_right = 59.0
margin_bottom = 32.0
size_flags_horizontal = 3
texture = ExtResource( 5 )

[node name="contador" type="Label" parent="UserInterface/items_missoes/gems"]
margin_left = 36.0
margin_top = 6.0
margin_right = 61.0
margin_bottom = 26.0
text = "x %s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="worms" type="TextureRect" parent="UserInterface/items_missoes"]
anchor_top = -0.15625
anchor_bottom = -0.15625
margin_left = 63.0
margin_right = 122.0
margin_bottom = 32.0
size_flags_horizontal = 3
texture = ExtResource( 6 )

[node name="contador" type="Label" parent="UserInterface/items_missoes/worms"]
margin_left = 20.0
margin_top = 6.0
margin_right = 38.0
margin_bottom = 26.0
text = "% s"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="contador_glasses" type="Label" parent="UserInterface/items_missoes"]
visible = false
margin_left = 137.0
margin_top = 6.0
margin_right = 202.0
margin_bottom = 26.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 3
text = "Oculos x%s"
align = 2

[node name="lives" type="TextureRect" parent="UserInterface"]
margin_top = -2.0
margin_right = 40.0
margin_bottom = 38.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="contador" type="Label" parent="UserInterface/lives"]
margin_left = 30.0
margin_top = 12.0
margin_right = 70.0
margin_bottom = 26.0
text = "x %s"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PauseScene/Opcoes/Voltar ao Jogo" to="." method="_on_Voltar_ao_Jogo_pressed"]
[connection signal="pressed" from="PauseScene/Opcoes/Sair" to="." method="_on_Sair_pressed"]
